<resources>

    <!-- Tela inicial -->
    <string name="app_name">FIFA UFMS</string>

    <!-- Header -->
    <string name="logo_desc">Logo do app</string>
    <string name="header_slogan">O seu app para gerenciamento de jogos</string>

    <!-- Cards -->
    <string name="card_times_title">Times</string>
    <string name="card_times_sub">Veja os times cadastrados</string>

    <string name="card_jogadores_title">Jogadores</string>
    <string name="card_jogadores_sub">Encontre os melhores jogadores</string>

    <string name="card_partidas_title">Partidas</string>
    <string name="card_partidas_sub">Acompanhe as partidas recentes</string>

    <!-- Tela: Times -->
    <string name="title_times">Times</string>
    <string name="back_button_desc">Voltar</string>
    <string name="em_construcao">Em construção...</string>
    <string name="add_time_button">Novo</string>
    <string name="section_times">Times cadastrados</string>
    <string name="selecionar_jogador">Add jogador ao time</string>

    <!-- Tela: Jogadores -->
    <string name="title_jogadores">Jogadores</string>
    <string name="add_jogador_button">Novo</string>
    <string name="section_jogadores">Jogadores cadastrados</string>
    <string name="add_jogador_desc">Adicionar novo jogador</string>
    <string name="edit_jogador_desc">Botão para editar jogador</string>
    <string name="jogador_icon_desc">Ícone representando jogador</string>
    <string name="empty_list_jogadores">Nenhum jogador cadastrado</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_email">Email</string>
    <string name="hint_data_nascimento">Data de Nascimento</string>
    <string name="hint_numero_gols">Número de Gols</string>
    <string name="hint_cartoes_amarelos">Cartões Amarelos</string>
    <string name="hint_cartoes_vermelhos">Cartões Vermelhos</string>
    <string name="hint_id_time">ID do Time</string>


    <!-- Tela: Formulário de Jogadores -->
    <string name="title_jogadores_form">Cadastrar Jogador</string>
    <string name="name_label">Nome</string>
    <string name="name_hint">Digite o nome do jogador</string>
    <string name="save_button">Salvar</string>


    <!-- Tela: Partidas -->
    <string name="title_partidas">Partidas</string>
    <string name="partidas">Partidas</string>
    <string name="todas_as_partidas">Todas as Partidas</string>
    <string name="nova_partida">Nova Partida</string>
    <string name="bot_o_para_adicionar_partida">Botão para adicionar partida</string>
    <string name="cadastrar_partida">Cadastrar Partida</string>
    <string name="data_da_partida_dd_mm_yyyy">(dd/mm/yyyy)</string>
    <string name="placar_time_1">Placar Time 1</string>
    <string name="placar_time_2">Placar Time 2</string>
    <string name="salvar_partida">Salvar Partida</string>
    <string name="placar_2_x_1">Placar: 2 x 1</string>
    <string name="data_01_06_2025">Data: 01/06/2025</string>
    <string name="editar_partida">Editar Partida</string>
    <string name="atualizar_partida">Atualizar</string>


</resources>
