<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/background_home"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:src="@drawable/logo_white"
                    android:contentDescription="@string/logo_desc"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_slogan"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="15dp"
                    android:padding="10dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </FrameLayout>

        <!-- Cards -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center">

            <!-- Card: Times -->
            <LinearLayout
                android:id="@+id/card_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/bg_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_times_title"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_times_sub"
                    android:textColor="@color/text"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Card: Jogadores -->
            <LinearLayout
                android:id="@+id/card_jogadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_jogadores_title"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_jogadores_sub"
                    android:textColor="@color/text"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- Card: Partidas -->
            <LinearLayout
                android:id="@+id/card_partidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_partidas_title"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_partidas_sub"
                    android:textColor="@color/text"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
